Java 9 compatibility.
Deprecated features:

* javac -source and -target value of 1.6 (require Java 7)
* new Integer(int) (use Integer.valueOf(int))

Java EE features:

* Add --add-modules java.xml.bind; also requires Ant 1.9.4 or later